add hotwire and turbo-frame to logs#index and users#index pages

--- a/templates/app/views/chaltron/users/index.html.erb
+++ b/templates/app/views/chaltron/users/index.html.erb
@@ -30,5 +30,6 @@
 
 </div>
 
-<%= render partial: 'users', locals: { users: @users, pagy: @pagy } %>
-
+<%= turbo_frame_tag 'chaltron_users' do %>
+  <%= render partial: 'users', locals: { users: @users, pagy: @pagy } %>
+<% end %>
