--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -27,13 +27,13 @@
       </div>
       <%# Reset filters %>
       <%= link_to t('.reset_filters'), request.params.merge(provider: nil, activity: nil),
-                                                    class: 'btn btn-primary w-100 mb-3', remote: true %>
+                                                    class: 'btn btn-primary w-100 mb-3' %>
     </div>
     <div class='col-md-9'>
       <div class='d-flex'>
         <%# Search form %>
         <div class='flex-grow-1'>
-          <%= form_tag chaltron_users_path, method: 'get', class: 'mb-3', remote: true do %>
+          <%= form_tag chaltron_users_path, method: 'get', class: 'mb-3' do %>
             <%= hidden_field_tag :direction, sort_direction %>
             <%= hidden_field_tag :sort, sort_column %>
             <div class='input-group'>
@@ -54,8 +54,7 @@
                 <li>
                 <%= link_to t('.sort_per_page', count: count),
                             request.params.merge(per_page: count, page: nil),
-                            class: class_names('dropdown-item', { active: sort_per_page == count }),
-                            remote: true %>
+                            class: class_names('dropdown-item', { active: sort_per_page == count }) %>
                 </li>
               <% end %>
             </ul>
@@ -72,8 +71,7 @@
                 <% %w[username email created_at].each do |field| %>
                 <li>
                   <%= link_to request.params.merge(sort: field, page: nil),
-                              class: class_names('dropdown-item', { active: sort_column == field }),
-                              remote: true do %>
+                              class: class_names('dropdown-item', { active: sort_column == field }) do %>
                       <%= t('.sorted_by') %> <%= Chaltron::User.human_attribute_name(field).downcase %>
                   <% end %>
                 </li>
@@ -81,7 +79,7 @@
               </ul>
             </div>
             <%= link_to(request.params.merge(direction: (sort_direction == 'asc' ? 'desc' : 'asc'), page: nil),
-                        remote: true, class: 'btn btn-outline-primary') do %>
+                        class: 'btn btn-outline-primary') do %>
               <%= icon :fas, sort_direction == 'desc' ? 'sort-alpha-up' : 'sort-alpha-down' %>
             <% end %>
           </div>
@@ -94,7 +92,7 @@
       <div class='mt-3'>
         <%== pagy_info(pagy) %>
         <div class='float-end'>
-          <%== pagy_bootstrap_nav(pagy, link_extra: "data-remote='true'") %>
+          <%== pagy_bootstrap_nav(pagy) %>
         </div>
       </div>
     </div>
