--- a/templates/app/views/layouts/_navbar.html.erb
+++ b/templates/app/views/layouts/_navbar.html.erb
@@ -96,7 +96,7 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to destroy_user_session_path, class: 'dropdown-item', method: :delete do %>
+                <%= button_to destroy_user_session_path, class: 'dropdown-item', method: :delete do %>
                   <%= icon :fas, 'sign-out-alt', 'Logout' %>
                 <% end %>
               </li>
