--- a/templates/app/views/chaltron/ldap/search.html.erb
+++ b/templates/app/views/chaltron/ldap/search.html.erb
@@ -1,33 +1,28 @@
 <h3><%= t('.title') %></h3>
-
-<%= form_tag chaltron_ldap_multi_new_path do |f| %>
-
-  <div class='mb-3'>
-    <%= label_tag :userid, t('.name_label'), class: 'col-sm-2 col-form-label' %>
-    <%= tag.input id: :userid, type: :text, name: :userid, class: 'form-control' %>
+<%= form_tag chaltron_ldap_multi_new_path, class: 'row row-cols-lg-auto g-3 align-items-center' do |f| %>
+  <div class='col-12'>
+    <%= tag.input id: :userid, type: :text, name: :userid, class: 'form-control', placeholder: t('.name_label') %>
     <%= content_tag :div, t('.name_help'), class: 'form-text' %>
   </div>
-
-  <div class='mb-3'>
-    <%= label_tag :lastname, t('.lastname_label'), class: 'col-sm-2 col-form-label' %>
-    <%= tag.input id: :lastname, type: :text, name: :lastname, class: 'form-control' %>
+  <div class='col-12'>
+    <%= tag.input id: :lastname, type: :text, name: :lastname, class: 'form-control', placeholder: t('.lastname_label') %>
     <%= content_tag :div, t('.lastname_help'), class: 'form-text' %>
   </div>
-
-  <div class='mb-3'>
-    <%= label_tag :department, t('.department_label'), class: 'col-sm-2 col-form-label' %>
-    <%= tag.input id: :department, type: :text, name: :department, class: 'form-control' %>
+  <div class='col-12'>
+    <%= tag.input id: :department, type: :text, name: :department, class: 'form-control', placeholder: t('.department_label') %>
     <%= content_tag :div, t('.department_help'), class: 'form-text' %>
   </div>
-
-  <div class='mb-3'>
-    <%= label_tag :limit, t('.limit_label'), class: 'col-sm-2 col-form-label' %>
-    <%= tag.input id: :limit, type: :text, name: :limit, class: 'form-control' %>
+  <div class='col-12'>
+    <%= tag.input id: :limit, type: :text, name: :limit, class: 'form-control', placeholder: t('.limit_label') %>
     <%= content_tag :div, t('.limit_help'), class: 'form-text' %>
   </div>
+  <div class='col-12'>
+    <%= tag.button t('.submit_text'), class: 'btn btn-primary', type: :submmit %>
+  </div>
+<% end %>
 
-  <%= submit_tag t('.submit_text'), class: 'btn btn-primary' %>
-  <%= link_to chaltron_users_path, class: 'btn btn-ligth' do %>
-    <%= icon :fas, :times, t('chaltron.common.cancel') %>
-  <% end %>
+<%= turbo_frame_tag :results %>
+<hr>
+<%= link_to chaltron_users_path, class: 'btn btn-primary' do %>
+  <%= icon :fas, 'arrow-left', t('chaltron.common.back') %>
 <% end %>
