--- a/templates/app/views/chaltron/users/_user.html.erb
+++ b/templates/app/views/chaltron/users/_user.html.erb
@@ -1,5 +1,5 @@
 <%= link_to user, class: 'list-group-item list-group-item-action d-flex gap-3 py-3',
-                  data: { 'turbo-frame' => '_top' } do %>
+                  data: { 'turbo-frame' => '_top' }, id: dom_id(user) do %>
   <div class='d-flex gap-2 w-100 justify-content-between'>
     <div>
 
