--- a/templates/app/views/chaltron/users/edit.html.erb
+++ b/templates/app/views/chaltron/users/edit.html.erb
@@ -3,3 +3,7 @@
   <h3><%= title %></h3>
   <%= render partial: 'form', locals: { submit_text: title, context: :update } %>
 </div>
+<hr>
+<%= link_to :back, class: 'btn btn-ligth' do %>
+  <%= icon :fas, :times, t('chaltron.common.cancel') %>
+<% end %>
