--- a/templates/app/views/chaltron/users/new.html.erb
+++ b/templates/app/views/chaltron/users/new.html.erb
@@ -1,3 +1,6 @@
 <h3><%= t '.title' %></h3>
 <%= render partial: 'form', locals: { submit_text: t('.submit_text'), context: :create } %>
-
+<hr>
+<%= link_to chaltron_users_path, class: 'btn btn-ligth' do %>
+  <%= icon :fas, :times, t('chaltron.common.back') %>
+<% end %>
