--- a/templates/app/views/home/test.html.erb
+++ b/templates/app/views/home/test.html.erb
@@ -5,6 +5,8 @@
       Chaltron rocks!
       <%= icon :fas, :rocket %>
     </p>
-    <%= back_link %>
+    <%= link_to :back, class: 'btn btn-primary' do %>
+      <%= icon :fas, 'arrow-left', t('chaltron.common.back') %>
+    <% end %>
   </div>
 </div>
