--- a/templates/app/views/chaltron/ldap/search.html.erb
+++ b/templates/app/views/chaltron/ldap/search.html.erb
@@ -13,7 +13,7 @@
     <%= content_tag :div, t('.department_help'), class: 'form-text' %>
   </div>
   <div class='col-12'>
-    <%= tag.input id: :limit, type: :text, name: :limit, class: 'form-control', placeholder: t('.limit_label') %>
+    <%= tag.input id: :limit, type: :text, name: :limit, class: 'form-control', value: @limit %>
     <%= content_tag :div, t('.limit_help'), class: 'form-text' %>
   </div>
   <div class='col-12'>
