fix update password issue

--- a/templates/app/views/chaltron/users/change_password.html.erb
+++ b/templates/app/views/chaltron/users/change_password.html.erb
@@ -5,8 +5,8 @@
 
         <%= simple_form_for current_user, as: :chaltron_user, url: self_update_chaltron_users_path do |f| %>
           <%= f.error_notification %>
-          <%= f.input :fullname %>
-          <%= f.input :email, disabled: current_user.provider.present? %>
+          <%= f.input :password %>
+          <%= f.input :password_confirmation %>
 
           <%= f.submit t('.submit'), class: 'btn btn-primary' %>
           <%= link_to self_show_chaltron_users_path, class: 'btn btn-link pull-right' do %>
