fix missing namespace in ldap-table stimulus controller

--- a/templates/app/views/chaltron/ldap/multi_new.turbo_stream.erb
+++ b/templates/app/views/chaltron/ldap/multi_new.turbo_stream.erb
@@ -6,7 +6,7 @@
                                             html: { id: 'ldap_create' }) do |f| %>
       <div class='mb-3'>
       <%= tag.table id: 'ldap_create', class: 'table table-striped table-sm',
-                    data: { controller: 'ldap-table' } do %>
+                    data: { controller: 'chaltron--ldap-table' } do %>
         <thead>
           <tr>
             <th class='checkbox'>
