--- a/templates/app/views/chaltron/self_user/show.html.erb
+++ b/templates/app/views/chaltron/self_user/show.html.erb
@@ -2,9 +2,11 @@
   <h3><%= t '.title' %></h3>
   <div class='row'>
 
-    <div class='col-md-9'>
+    <div class='col-md-9 mt-2'>
       <div class='card'>
-        <div class='card-header'><%= t '.headers.details' %></div>
+        <div class='card-header'>
+          <%= t '.headers.details' %>
+        </div>
         <ul class='list-group list-group-flush'>
           <li class='list-group-item'>
             <span><%= Chaltron::User.human_attribute_name(:username) %>: </span>
@@ -24,11 +26,15 @@
               <strong><%= current_user.department %> </strong>
             </li>
           <% end %>
+          <li class='list-group-item'>
+            <span><%= Chaltron::User.human_attribute_name(:avatar) %>: </span>
+            <%= display_user_avatar current_user, class: 'rounded ms-2' %>
+          </li>
         </ul>
       </div>
     </div>
 
-    <div class='col-md-3'>
+    <div class='col-md-3 mt-2'>
       <div class='card'>
         <div class='card-header'><%= t '.headers.activity' %></div>
         <ul class='list-group list-group-flush'>
