fix alignment issue with avatar in navbar

--- a/templates/app/views/home/index.html.erb
+++ b/templates/app/views/home/index.html.erb
@@ -109,7 +109,7 @@
 
 <hr>
 
-<div class='row'%>
+<div class='row'>
   <div class='col'>
     <h2 class='pt-4'>
       <%= icon(:far, 'question-circle') %>
