fix alignment issue in collapsed navbar

--- a/templates/app/views/layouts/_navbar.html.erb
+++ b/templates/app/views/layouts/_navbar.html.erb
@@ -51,7 +51,8 @@
         </li>
       </ul>
       <%# Right navbar %>
-      <%= render 'chaltron/navbar'%>
+      <%= render 'chaltron/admin_navbar'%>
+      <%= render 'chaltron/login_navbar'%>
     </div>
   </div>
 </nav>
