--- a/templates/app/views/chaltron/_login_navbar.html.erb
+++ b/templates/app/views/chaltron/_login_navbar.html.erb
@@ -2,12 +2,10 @@
   <% if signed_in? %>
       <%# Login navbar %>
     <li class='nav-item dropdown'>
-      <%
-        active = params[:controller] == 'chaltron/self_user'
-        klass = class_names('nav-link dropdown-toggle', { active: active })
-      %>
+      <% active = params[:controller] == 'chaltron/self_user'
+         klass = class_names('nav-link dropdown-toggle', { active: active }) %>
       <%= link_to '#', id: 'navbarDropdownLogin', class: klass,
-                        data: { 'bs-toggle' => 'dropdown' } do %>
+                       data: { 'bs-toggle' => 'dropdown' } do %>
         <%= display_user_avatar current_user, class: 'rounded-circle', size: '23' %>
       <% end %>
       <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end' aria-labelledby='navbarDropdownLogin'>
