--- a/templates/app/views/chaltron/self_user/edit.html.erb
+++ b/templates/app/views/chaltron/self_user/edit.html.erb
@@ -3,19 +3,12 @@
       <div class='col'>
         <h3><%= t('.title') %></h3>
 
-        <%= simple_form_for current_user, as: :chaltron_user, url: chaltron_self_user_update_path do |f| %>
+        <%= simple_form_for current_user, as: :chaltron_user,
+                                          url: chaltron_self_user_update_path do |f| %>
           <%= f.error_notification %>
           <%= f.input :fullname %>
-          <% if current_user.provider.nil? %>
-          <%= f.input :email %>
-            <fieldset>
-              <legend>Password</legend>
-              <%= f.input :password %>
-              <%= f.input :password_confirmation %>
-            </fieldset>
-          <% else %>
-            <%= f.input :email, disabled: true %>
-          <% end %>
+          <%= f.input :email, disabled: current_user.provider.present? %>
+          <%= f.input :avatar, as: :file, input_html: { accept: 'image/png image/jpeg image/gif image/bmp image/tiff'} %>
 
           <%= f.submit t('.submit'), class: 'btn btn-primary' %>
           <%= link_to chaltron_self_user_show_path, class: 'btn btn-link pull-right' do %>
