--- a/templates/app/views/layouts/_navbar.html.erb
+++ b/templates/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav id='navbar-top' class='navbar navbar-expand-lg navbar-dark bg-dark'>
-  <div class='container-fluid'>
+  <div class='container-fluid mx-auto'>
     <%= link_to 'Home page', root_path, class: 'navbar-brand' %>
     <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
             aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
@@ -51,67 +51,8 @@
         </li>
       </ul>
       <%# Right navbar %>
-      <ul class='navbar-nav'>
-        <% if signed_in? %>
-          <%# Admin navbar %>
-          <li class='nav-item dropdown'>
-          <%
-            logs = params[:controller] == 'chaltron/logs'
-            users = params[:controller] == 'chaltron/ldap' ||
-                    (params[:controller] == 'chaltron/users' and !params[:action].start_with?('self'))
-            klass = class_names('nav-link', 'dropdown-toggle', { active: logs || users })
-          %>
-            <%= link_to '#', id: 'navbarDropdownAdmin', class: klass,
-                                                        data: { 'bs-toggle' => 'dropdown' } do %>
-              <%= icon :fas, :cogs, I18n.t('chaltron.menu.admin') %>
-            <% end %>
-            <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end' aria-labelledby='navbarDropdownAdmin'>
-              <li>
-                <%= link_to chaltron_users_path,
-                            class: class_names('dropdown-item', { active: users }) do %>
-                  <%= icon :fas, :user, I18n.t('chaltron.menu.users') %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to chaltron_logs_path,
-                            class: class_names('dropdown-item', { active: logs }) do %>
-                  <%= icon :fas, :book,  I18n.t('chaltron.menu.logs') %>
-                <% end %>
-              </li>
-            </ul>
-          </li>
-          <%# Login navbar %>
-          <li class='nav-item dropdown'>
-            <%
-              active = params[:controller] == 'chaltron/self_user'
-              klass = class_names('nav-link', 'dropdown-toggle', { active: active })
-            %>
-            <%= link_to current_user.display_name, '#', id: 'navbarDropdownLogin', class: klass,
-                                                        data: { 'bs-toggle' => 'dropdown' } %>
-            <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end' aria-labelledby='navbarDropdownLogin'>
-              <li>
-                <%= link_to chaltron_self_user_show_path,
-                            class: class_names('dropdown-item', { active: active }) do %>
-                  <%= icon :fas, :user, I18n.t('chaltron.menu.self_show') %>
-                <% end %>
-              </li>
-              <li>
-                <%= button_to destroy_user_session_path, class: 'dropdown-item', method: :delete do %>
-                  <%= icon :fas, 'sign-out-alt', 'Logout' %>
-                <% end %>
-              </li>
-            </ul>
-          </li>
-        </li>
-        <% else %>
-        <li>
-          <%= link_to new_user_session_path,
-                      class: class_names('nav-link', { active: current_page?(new_user_session_path) }) do %>
-            <%= icon :fas, 'sign-in-alt', 'Login' %>
-          <% end %>
-        </li>
-        <% end %>
-      </ul>
+      <%= render 'chaltron/admin_navbar'%>
+      <%= render 'chaltron/login_navbar'%>
     </div>
   </div>
 </nav>
