--- a/templates/app/views/chaltron/users/_user.html.erb
+++ b/templates/app/views/chaltron/users/_user.html.erb
@@ -19,9 +19,9 @@
       <p class='mb-0 opacity-75'><%= user.email %></p>
     </div>
     <div class='d-flex flex-column'>
-      <small class='opacity-50 text-nowrap'>
-        <%= t('.created_ago', time: time_ago_in_words(user.created_at)) %>
-      </small>
+      <%= tag.small t('.created_ago', time: time_ago_in_words(user.created_at)),
+                class: 'opacity-50 text-nowrap', title: l(user.created_at),
+                data: { 'bs-toggle': 'tooltip', 'bs-placement': 'left' } %>
       <small class='opacity-50 text-nowrap'>
         <span><%= Chaltron::User.human_attribute_name(:sign_in_count) %>: </span>
         <strong><%= user.sign_in_count %></strong>
