--- a/templates/app/views/chaltron/users/index.html.erb
+++ b/templates/app/views/chaltron/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class='d-flex w-100 justify-content-between mb-3'>
-  <div>
+  <div class='align-self-center'>
     <h3><%= t '.title' %></h3>
   </div>
 
