fix chaltron link in footer

--- a/templates/app/views/layouts/_footer.html.erb
+++ b/templates/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <%= tag.div class: 'navbar-text' do %>
       <%= icon(:fab, :github) %>
       Created with
-      <%= link_to 'chaltron', 'https://github.com/vicvega/chaltron', class: 'navbar-link' %>
+      <%= link_to 'chaltron', 'https://github.com/vicvega/chaltron-template', class: 'navbar-link' %>
     <% end %>
     <%= tag.div(revision, class: 'navbar-text') unless revision.nil? %>
     </div>
