--- a/templates/app/views/chaltron/users/_user.html.erb
+++ b/templates/app/views/chaltron/users/_user.html.erb
@@ -1,16 +1,14 @@
 <%= link_to user, class: 'list-group-item list-group-item-action d-flex gap-3 py-3',
                   data: { 'turbo-frame' => '_top' }, id: dom_id(user) do %>
   <div class='d-flex gap-2 w-100 justify-content-between'>
-    <%= display_user_avatar user, size: '60', class: 'rounded' %>
+    <%= display_user_avatar user, size: '60', class: 'rounded align-self-center' %>
     <div class='flex-grow-1'>
-      <div class='d-flex'>
-        <h5 class='mb-0'>
-          <%= user.display_name %>
-          <%= safe_join(user.roles.map do |x|
-                          tag.span(t("chaltron/roles.#{x.name}"), class: 'badge bg-primary me-2')
-                        end) %>
-        </h5>
-      </div>
+      <h5 class='mb-0'>
+        <%= user.display_name %>
+        <%= safe_join(user.roles.map do |x|
+                        tag.span(t("chaltron/roles.#{x.name}"), class: 'badge bg-primary me-2')
+                      end) %>
+      </h5>
       <p class='mb-0 opacity-75'>
         <%= user.username %>
         <%= tag.span(I18n.t('chaltron.users.it_s_you'), class: 'badge bg-success me-2') if user == current_user %>
