--- a/templates/app/views/chaltron/ldap/search.html.erb
+++ b/templates/app/views/chaltron/ldap/search.html.erb
@@ -1,15 +1,18 @@
 <h3><%= t('.title') %></h3>
 <%= form_tag chaltron_ldap_multi_new_path, class: 'row g-3 align-items-center' do |f| %>
   <div class='w-auto flex-grow-1'>
-    <%= tag.input id: :userid, type: :text, name: :userid, class: 'form-control', placeholder: t('.name_label') %>
+    <%= tag.input id: :userid, type: :text, name: :userid, class: 'form-control',
+                  placeholder: t('.name_label') %>
     <%= content_tag :div, t('.name_help'), class: 'form-text' %>
   </div>
   <div class='w-auto flex-grow-1'>
-    <%= tag.input id: :lastname, type: :text, name: :lastname, class: 'form-control', placeholder: t('.lastname_label') %>
+    <%= tag.input id: :lastname, type: :text, name: :lastname, class: 'form-control',
+                  placeholder: t('.lastname_label') %>
     <%= content_tag :div, t('.lastname_help'), class: 'form-text' %>
   </div>
   <div class='w-auto flex-grow-1'>
-    <%= tag.input id: :department, type: :text, name: :department, class: 'form-control', placeholder: t('.department_label') %>
+    <%= tag.input id: :department, type: :text, name: :department, class: 'form-control',
+                  placeholder: t('.department_label') %>
     <%= content_tag :div, t('.department_help'), class: 'form-text' %>
   </div>
   <div class='w-auto flex-grow-1'>
