--- a/templates/app/views/chaltron/ldap/multi_new.turbo_stream.erb
+++ b/templates/app/views/chaltron/ldap/multi_new.turbo_stream.erb
@@ -3,14 +3,18 @@
     <h3 class='mt-3'><%= t('.title') %></h3>
     <%= tag.p t('.par'), class: 'm-0' %>
     <%= simple_form_for(Chaltron::User.new, url: chaltron_ldap_multi_create_path,
-                                            html: { id: 'ldap_create' }) do |f| %>
+                                            html: { id: 'ldap_create' },
+                                            data: { controller: 'chaltron--ldap-table' }) do |f| %>
       <div class='mb-3'>
-      <%= tag.table id: 'ldap_create', class: 'table table-striped table-sm',
-                    data: { controller: 'chaltron--ldap-table' } do %>
+      <%= tag.table id: 'ldap_create', class: 'table table-striped table-sm' do %>
         <thead>
           <tr>
             <th class='checkbox'>
-              <%= custom_checkbox(id: 'entry-check-all', class: 'entry') %>
+              <%= custom_checkbox(class: 'entry',
+                                  data: {
+                                    action: 'change->chaltron--ldap-table#toggleCheckBoxes',
+                                    chaltron__ldap_table_target: 'checkAll'
+                                  }) %>
             </th>
             <th class='username'>
               <%= Chaltron::User.human_attribute_name(:username) %>
@@ -37,7 +41,11 @@
 
       <%= f.submit t('.submit_text'), id: 'ldap_create_button',
                                       class: 'btn btn-primary',
-                                      disabled: true %>
+                                      disabled: true,
+                                      data: {
+                                        chaltron__ldap_table_target: 'button',
+                                        action: 'chaltron--ldap-table#submit'
+                                      } %>
     <% end %>
   <% end %>
 <% end %>
