--- a/templates/app/views/chaltron/self_user/edit.html.erb
+++ b/templates/app/views/chaltron/self_user/edit.html.erb
@@ -3,7 +3,7 @@
       <div class='col'>
         <h3><%= t('.title') %></h3>
 
-        <%= simple_form_for current_user, as: :chaltron_user,
+        <%= simple_form_for current_user, as: :chaltron_user, wrapper: :vertical_form,
                                           url: chaltron_self_user_update_path do |f| %>
           <%= f.error_notification %>
           <%= f.input :fullname %>
