--- a/templates/app/views/shared/_flash.html.erb
+++ b/templates/app/views/shared/_flash.html.erb
@@ -1,4 +1,4 @@
-<turbo-frame id='flash'>
+<div id='flash'>
   <%= tag.div class: 'flash-container',
               data: {
                 controller: 'chaltron--remove',
@@ -8,4 +8,4 @@
       <%= flash_message(flash[m], m) unless flash[m].nil? %>
     <% end %>
   <% end %>
-</turbo-frame>
+</div>
