fix resize options in variant for user avatars

--- a/templates/app/views/chaltron/_login_navbar.html.erb
+++ b/templates/app/views/chaltron/_login_navbar.html.erb
@@ -6,7 +6,7 @@
          klass = class_names('nav-link dropdown-toggle', { active: active }) %>
       <%= link_to '#', id: 'navbarDropdownLogin', class: klass,
                        data: { 'bs-toggle' => 'dropdown' } do %>
-        <%= display_user_avatar current_user, class: 'rounded-circle', size: '23' %>
+        <%= display_user_avatar current_user, class: 'rounded-circle', size: 23 %>
       <% end %>
       <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end' aria-labelledby='navbarDropdownLogin'>
         <li>
