--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -1,4 +1,4 @@
-<div id='users' data-controller='chaltron--tooltip'>
+<div id='users'>
   <div class='row'>
     <div class='col-md-3'>
       <%# Provider filters %>
