fix links to chaltron on github

--- a/templates/app/views/home/index.html.erb
+++ b/templates/app/views/home/index.html.erb
@@ -58,7 +58,7 @@
             It's so easy to build up and running web applications in a few seconds.
             Try by yourself
           </p>
-          <%= link_to 'Have a look', 'https://github.com/vicvega/chaltron', class: 'btn btn-primary' %>
+          <%= link_to 'Have a look', 'https://github.com/vicvega/chaltron-template', class: 'btn btn-primary' %>
         </div>
         <div class='card-footer'>
           <small class='text-muted'>
@@ -101,7 +101,7 @@
     <p>In short all you need is here. Don't waste time with RAD. Try LSAD!</p>
     <p>
       Try
-      <strong><%= link_to 'Chaltron', 'https://github.com/vicvega/chaltron' %></strong>,
+      <strong><%= link_to 'Chaltron', 'https://github.com/vicvega/chaltron-template' %></strong>,
       taste <strong>L</strong>ight <strong>S</strong>peed <strong>A</strong>pplication <strong>D</strong>evelopment!
     </p>
   </div>
