--- a/templates/app/views/chaltron/users/index.html.erb
+++ b/templates/app/views/chaltron/users/index.html.erb
@@ -17,12 +17,12 @@
           <%= link_to t('.new_ldap_user'), chaltron_ldap_search_path, class: 'dropdown-item' %>
         </li>
         <li>
-          <%= link_to t('.new_local_user'), new_chaltron_user_path, class: 'dropdown-item' %>
+          <%= link_to t('.new_local_user'), new_chaltron_local_user_path, class: 'dropdown-item' %>
         </li>
       <% end %>
     </div>
   <% else %>
-    <%= link_to new_chaltron_user_path, class: 'btn btn-lg btn-primary' do %>
+    <%= link_to new_chaltron_local_user_path, class: 'btn btn-lg btn-primary' do %>
       <%= icon :fas, :plus, t('.new_local_user') %>
     <% end %>
   <% end %>
