--- a/templates/app/views/chaltron/users/show.html.erb
+++ b/templates/app/views/chaltron/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-  <h3><%= @user.display_name %></h3>
+  <h3><%= user.display_name %></h3>
   <div class='row'>
 
     <div class='col-md-9'>
@@ -8,25 +8,26 @@
         <ul class='list-group list-group-flush'>
           <li class='list-group-item'>
             <span><%= Chaltron::User.human_attribute_name(:username) %>: </span>
-            <strong><%= display_username(@user, link: false) %></strong>
+            <strong><%= display_username(user, link: false) %></strong>
+            <%= tag.span(user.provider || 'utenza locale', class: 'badge bg-primary') %>
           </li>
           <li class='list-group-item'>
             <span><%= Chaltron::User.human_attribute_name(:fullname) %>: </span>
-            <strong><%= @user.fullname %></strong>
+            <strong><%= user.fullname %></strong>
           </li>
           <li class='list-group-item'>
             <span><%= Chaltron::User.human_attribute_name(:email) %>: </span>
-            <strong><%= @user.email %></strong>
+            <strong><%= user.email %></strong>
           </li>
-          <% unless @user.department.nil? %>
+          <% unless user.department.nil? %>
             <li class='list-group-item'>
               <span><%= Chaltron::User.human_attribute_name(:department) %>: </span>
-              <strong><%= @user.department %> </strong>
+              <strong><%= user.department %> </strong>
             </li>
           <% end %>
           <li class='list-group-item'>
             <span><%= Chaltron::User.human_attribute_name(:roles) %>: </span>
-            <%= safe_join(@user.roles.map do |x|
+            <%= safe_join(user.roles.map do |x|
                             tag.span(t("chaltron/roles.#{x.name}"), class: 'badge bg-primary')
                           end, ' ') %>
           </li>
@@ -40,18 +41,18 @@
         <ul class='list-group list-group-flush'>
           <li class='list-group-item'>
             <span><%= Chaltron::User.human_attribute_name(:sign_in_count) %>: </span>
-            <strong><%= @user.sign_in_count %></strong>
+            <strong><%= user.sign_in_count %></strong>
           </li>
-          <% unless @user.last_sign_in_at.nil? %>
+          <% unless user.last_sign_in_at.nil? %>
             <li class='list-group-item'>
               <span><%= Chaltron::User.human_attribute_name(:last_sign_in_at) %>: </span>
-              <strong><%= l @user.last_sign_in_at, format: :short %> </strong>
+              <strong><%= l user.last_sign_in_at, format: :short %> </strong>
             </li>
           <% end %>
-          <% unless @user.last_sign_in_ip.nil? %>
+          <% unless user.last_sign_in_ip.nil? %>
             <li class='list-group-item'>
               <span><%= Chaltron::User.human_attribute_name(:last_sign_in_ip) %>: </span>
-              <strong><%= @user.last_sign_in_ip %> </strong>
+              <strong><%= user.last_sign_in_ip %> </strong>
             </li>
           <% end %>
         </ul>
@@ -65,27 +66,28 @@
 
   <div class='float-end'>
     <% danger = %w[btn btn-danger]
-       danger << 'disabled' if @user == current_user %>
-    <% if can? :edit, @user %>
-      <%= link_to edit_chaltron_user_path(@user), class: 'btn btn-primary' do %>
+       danger << 'disabled' if user == current_user %>
+    <% if can? :edit, user %>
+      <% url = user.is_a?(Chaltron::LocalUser) ? edit_chaltron_local_user_path(user) : edit_chaltron_omni_user_path(user) %>
+      <%= link_to url, class: 'btn btn-primary' do %>
         <%= icon :fas, :edit, t('.edit') %>
       <% end %>
-      <% if @user.enabled? %>
-          <%= link_to disable_chaltron_user_path(@user), class: danger do %>
+      <% if user.enabled? %>
+          <%= link_to disable_chaltron_user_path(user), class: danger do %>
           <%= icon :fas, 'user-slash', t('.disable') %>
         <% end %>
       <% else %>
-        <%= link_to enable_chaltron_user_path(@user), class: 'btn btn-primary' do %>
+        <%= link_to enable_chaltron_user_path(user), class: 'btn btn-primary' do %>
           <%= icon :fas, :user, t('.enable') %>
         <% end %>
       <% end %>
     <% end %>
-    <%= link_to @user, class: danger, method: :delete,
+    <%= link_to user, class: danger, method: :delete,
                        data: {
                          turbo_method: :delete,
-                         turbo_confirm: t('.destroy_confirm', user: @user.username)
+                         turbo_confirm: t('.destroy_confirm', user: user.username)
                        } do %>
       <%= icon :fas, :trash, t('.destroy') %>
-    <% end if can? :destroy, @user %>
+    <% end if can? :destroy, user %>
   </div>
 </div>
