--- a/templates/app/views/chaltron/users/edit.html.erb
+++ b/templates/app/views/chaltron/users/edit.html.erb
@@ -6,11 +6,13 @@
 
       <% if current_user == user %>
         <%= f.input :role_ids, as: :check_boxes, wrapper: :vertical_collection_inline,
-                              collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] },
-                              disabled: Chaltron::Role.where(name: 'user_admin').map(&:id) %>
+                               collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] },
+                               disabled: Chaltron::Role.where(name: 'user_admin').map(&:id) %>
       <% else %>
         <%= f.input :role_ids, as: :check_boxes, wrapper: :vertical_collection_inline,
-                              collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] } %>
+                               collection: Chaltron::Role.all.map do |r|
+                                 [I18n.t("chaltron/roles.#{r.name}"), r.id]
+                               end %>
       <% end %>
     <%= f.submit title, class: 'btn btn-primary' %>
   <% end %>
